# xiaoba-workflow

./: .env.example  .gitignore  AGENTS.md  CAPABILITY_MATRIX.md  CHANGELOG.md  CODEX_HANDOFF.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FLOW_AUDIT.md  IMPLEMENTATION_PLAN.md  LICENSE  LOCAL_END_TO_END_ACCEPTANCE.md  MOCK_E2E_ACCEPTANCE_REPORT.md  README.md  SKILL.md  USER_MANUAL.md  UX_LITE_IMPLEMENTATION_REPORT.md  V0_2_0_IMPLEMENTATION_REPORT.md  V1_PRODUCTIZATION_REPORT.md  V1_RELEASE_CHECKLIST.md  XIAOBA_OPTIMIZATION_EXECUTION_PLAN.md  pyproject.toml  setup.py  workflow.yaml  xiaoba.local.example.yaml
docs/: CODEX_LEARNING_GUIDE.md  NEXT_CODEX_INSTALL_AND_TEST_PROMPT.md
lingzao/: .gitignore  LICENSE  README.md  SKILL.md
prompts/: hot-learning-analysis-only.md  hot-learning-cross-sample.md  lingzao-evidence-only.md  personal-content-governance.md
scripts/: hot_learning_runner.py  lingzao_runner.py
tasks/: .gitkeep  README.md
templates/: evidence.yaml  state.yaml  task.yaml
tests/: test_analysis_normalization.py  test_cli.py  test_evidence_normalization.py  test_generation_flow.py  test_learning_batch_analysis.py  test_learning_batch_analysis_normalization.py  test_learning_batch_cross_sample_aggregation.py  test_learning_batch_evidence_collection.py  test_learning_batch_evidence_normalization.py  test_learning_batch_mechanism_intake.py  test_learning_batch_selection.py  test_learning_summary.py  test_lingzao_provider.py  test_mechanism_intake.py  test_mock_hot_learning.py  test_run_mock_learning.py  test_state_machine.py  test_ux_lite.py  (+2 more)
(+71 files in other folders)
