[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoba-workflow"
version = "0.2.0"
description = "Lightweight orchestration baseline for XHS content learning workflows."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.scripts]
xiaoba-workflow = "xiaoba_workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
