[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoba-workflow"
version = "1.0.0"
description = "Lightweight orchestration baseline for XHS content learning workflows."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.scripts]
xiaoba-workflow = "xiaoba_workflow.cli:main"

[tool.setuptools.packages.find]
include = ["xiaoba_workflow*"]
exclude = ["prompts*", "templates*", "tests*", "tasks*"]

[tool.setuptools.package-data]
xiaoba_workflow = [
    "assets/workflow.yaml",
    "assets/prompts/*.md",
    "assets/templates/*.yaml",
    "assets/scripts/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
